# LuaU-Decompile

./: BytecodeUtils.h  CMakeLists.txt  Dockerfile  README.md  base64.h  bytecode_reader.cpp  bytecode_reader.h  cfg.cpp  cfg.h  codewriter.cpp  codewriter.h  core.js  deserializer.js  disassembler.cpp  disassembler.h  main.cpp  opcodes.js  package.json  reader.js  server.js  structurizer.cpp  structurizer.h
luau/: Bytecode.h
